# Tonic

./: CMakeLists.txt  Tonic.sln  test.lua
Apothicary/: Apothicary.vcxproj  Apothicary.vcxproj.filters
Apothicary/src/: Apothic.h
Apothicary/src/Apothic/: Application.cpp  Application.h  EntryPoint.cpp
Apothicary/src/Apothic/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Apothicary/src/Apothic/Rendering/: Camera.cpp  Camera.h  DataTypes.h  Layer.cpp  Layer.h  Material.cpp  Material.h  RenderSystem.h  Renderer.h  Shader.h  VertexCollection.h  Vertexlayout.h  Window.h
Argon/: Argon.vcxproj  Argon.vcxproj.filters
Argon/src/: Argon.h
Argon/src/Argon/DataTypes/: Matrix.h  Vector.h
Argon/src/Argon/Operations/: Overloads.h
Argon/src/Argon/Operations/linear/: Matrix_Operations.h  Vector_Operations.h
Argon/src/Argon/Operations/simd/: ArgonSIMD.h  Matrix_Operations_SIMD.h  Vector_Operations_SIMD.h
Argon/src/Argon/Transforms/: MatrixTransforms.cpp
Argon/src/Argon/util/: types.h
GLFW/: GLFW.vcxproj  GLFW.vcxproj.filters  desktop.ini
ScratchPad/: ScratchPad.vcxproj  ScratchPad.vcxproj.filters
ScratchPad/src/: Scratchpad.cpp
Tonic/: Tonic.vcxproj  Tonic.vcxproj.filters
Tonic/content/Shaders/: FlatColor.shader
Tonic/src/Tonic/: main.cpp
Xenon/: Xenon.vcxproj  Xenon.vcxproj.filters
Xenon/src/: Xenon.h
Xenon/src/Xenon/: ComponentPool.h  ECS.h  SystemInterface.h  Types.h
Xenon/src/Xenon/Lua/: LuaVM.h
bin-int/Apothicary/x64-Debug/Apothicary.tlog/: Apothicary.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
bin-int/Argon/x64-Debug/: Argon.recipe
bin-int/GLFW/x64-Debug/GLFW.tlog/: GLFW.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
bin-int/ScratchPad/x64-Debug/: ScratchPad.exe.recipe  vc143.idb  vc145.idb
bin-int/ScratchPad/x64-Debug/ScratchPad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.2.tlog  link.secondary.1.tlog  link.write.1.tlog
bin-int/Tonic/x64-Debug/: Tonic.exe.recipe  vc143.idb  vc145.idb
bin-int/Tonic/x64-Debug/Tonic.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.read.2.tlog  link.secondary.1.tlog  link.write.1.tlog
bin-int/Xenon/x64-Debug/: Xenon.recipe
bin-int/glad/x64-Debug/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
